--- a/src/components/PartnerSection/PartnerSection.css
+++ b/src/components/PartnerSection/PartnerSection.css
@@ -41,7 +41,8 @@
   line-height: 100%;
   color: #0a0909;
   margin: 0;
-  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.57);
+  max-width: 494px;
+  text-align: center;
 }
 
 .partner-section__title-accent {
@@ -56,7 +57,8 @@
   font-size: 16px;
   line-height: 145%;
   color: #2f2f2f;
-  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
+  max-width: 494px;
+  text-align: center;
 }
 
 .partner-section__buttons {
